--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <h1>Дни до дня рождения</h1>
-    <div class="counter_container">
-        <input type="date" class="birthday" onchange="change()">
-        <div id="alarm"></div>
-        <button type="button" id="birthdayBtn">Посчитать</button>
-    </div>
-
+    <section class="birthday-block">
+        <h1>Дни до дня рождения</h1>
+        <div class="counter_container">
+            <input type="date" class="birthday" onchange="change()">
+            <div id="alarm"></div>
+            <button type="button" id="birthdayBtn">Посчитать</button>
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 
