--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="birthday-block">
+    <section class="birthday_block">
         <h1>Дни до дня рождения</h1>
         <div class="counter_container">
             <input type="date" class="birthday" onchange="change()">
